--- a/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
@@ -5,6 +5,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Berkshire+Swash&family=Comic+Neue:wght@700&family=Gentium+Book+Plus:wght@400;700&family=Lato:ital,wght@0,400;0,700;0,900;1,700&family=Lexend+Deca:wght@500&family=Lexend:wght@500&family=Montserrat:wght@500&family=Open+Sans:wght@500;800&family=Roboto:wght@100;400&family=Sue+Ellen+Francisco&family=Work+Sans:wght@400;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900;&display:swap">
 
+  <!-- catagory section  -->
+  <div class="catagory">
+    <div class="card menu">
+       <p-megaMenu [model]="items"/>
+    </div>
+  </div>
+
+  <div class="sale-template">
+       <img src="https://rukminim1.flixcart.com/fk-p-flap/1600/230/image/dc489698305954c1.jpg?q=20" alt="">
+  </div>
 
   <ngb-carousel>
   <ng-template ngbSlide>
