--- a/Frontend/Shopcart/src/app/Pages/seller-auth/login/login.component.html
+++ b/Frontend/Shopcart/src/app/Pages/seller-auth/login/login.component.html
@@ -25,8 +25,10 @@
       </small>
 
       <div class="input_box">
-        <input type="password" id="pass" class="input-field" formControlName="password" required>
+        <input [type]="eye" type="password" id="pass" class="input-field" formControlName="password" required>
         <label for="pass" class="label">Password</label>
+        <i (click)="onClick()" *ngIf="!show" class="pi pi-eye" style="font-size: 1rem"></i>
+        <i (click)="onClick()" *ngIf="show" class="pi pi-eye-slash" style="font-size: 1rem"></i>
         <i class="bx bx-lock-alt icon" id="togglePassword"></i>
       </div>
 
