--- a/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.html
+++ b/Frontend/Shopcart/src/app/Pages/order/order-details/order-details.component.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="row" *ngFor="let order of orderProductData">
-              <div class="col-6">
+              <div class="col-sm-6">
                 <div class="card shadow-0 border mb-4">
                   <div class="card-body">
                     <div class="row">
@@ -92,8 +92,7 @@
                   </div>
                 </div>
               </div>
-  
-              <div class="col-6">
+              <div class="col-sm-6">
                 <div class="d-flex justify-content-between pt-2">
                   <p class="fw-bold mb-0">Order Details</p>
                   <p class="text-muted mb-0">
