--- a/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
+++ b/Frontend/Shopcart/src/app/Pages/product-detail/product-details/product-details.component.css
@@ -1,3 +1,4 @@
+@import "primeicons/primeicons.css";
 
 .productImage{
 	width: 100%;
@@ -325,7 +326,7 @@
 	cursor: pointer;
 }
 
-.fa-heart{
+.heart{
     margin-left: 50px;
     margin-top: 4px;
     font-size: 25px;
