--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
@@ -13,7 +13,7 @@
     </div>
        <!-- Without login Nabvar -->
       <ul class="links" *ngSwitchCase="'default'">
-        <li><a routerLink="wishlist"><i class="fa-solid fa-heart"></i></a></li>
+        <li><a routerLink="user-login"><i class="fa-solid fa-heart"></i></a></li>
         <li><a class="nav-login" routerLink="user-login"><i class="fa-solid fa-user"></i></a></li>
         <li><a routerLink="login"><i class="fa fa-store"></i></a></li>
         <li routerLink="user-login"><a ><mat-icon matBadge="{{cartItems}}" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
