--- a/Frontend/Shopcart/src/app/Pages/wishlist/wishlist/wishlist.component.css
+++ b/Frontend/Shopcart/src/app/Pages/wishlist/wishlist/wishlist.component.css
@@ -16,9 +16,10 @@ h1{
 
 h2{
   margin-top: 50px;
-  font-size: 46px;
+  font-size: 35px;
   line-height: 54px;
   color: #b0aefd;
+  font-family: Montserrat;
 }
 
 h4{
