--- a/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
+++ b/Frontend/Shopcart/src/app/Pages/home/home/home.component.html
@@ -131,7 +131,10 @@
           </div>
           <h4>{{items.productPrice | currency: 'INR' }}</h4>
         </div>
-        <a href=""><i class="fal fa-shopping-cart cart"></i></a>
+                <!-- Add item Whishlist Functionality -->
+                <a ><i (click)="addToWishlist()" *ngIf="!removeWishlist" class="pi pi-heart heart cart"></i></a>
+                <!-- Remove item Whishlist Functionality -->
+                <a ><i (click)="removeToWishlist()" *ngIf="removeWishlist" class="pi pi-heart-fill fill-cart" aria-hidden="true"></i></a>
       </div>
     </div>
   </section>
