--- a/Frontend/Shopcart/src/app/Pages/user-auth/user-forgot-password/user-forgot-password.component.html
+++ b/Frontend/Shopcart/src/app/Pages/user-auth/user-forgot-password/user-forgot-password.component.html
@@ -10,8 +10,8 @@
       </div>
       
       <small *ngIf="email.invalid && (email.dirty || email.touched)" class="block p-error">
-        <div *ngIf="email.errors?.['required']">Email is required.</div>
-        <div *ngIf="email.errors?.['email']">Email should be valid</div>
+        <div class="message" *ngIf="email.errors?.['required']"> <i class="fa-solid fa-triangle-exclamation"></i>Email is required.</div>
+        <div class="message" *ngIf="email.errors?.['email']"> <i class="fa-solid fa-triangle-exclamation"></i>Email should be valid</div>
       </small>
      
       <div class="input_box">
