--- a/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
+++ b/Frontend/Shopcart/src/app/Core/header/navbar/navbar.component.html
@@ -13,14 +13,15 @@
     </div>
        <!-- Without login Nabvar -->
       <ul class="links" *ngSwitchCase="'default'">
-        <li><a routerLink="user-login"><i class="fa-solid fa-heart"></i></a></li>
-        <li><a class="nav-login" routerLink="user-login"><i class="fa-solid fa-user"></i></a></li>
-        <li><a routerLink="login"><i class="fa fa-store"></i></a></li>
-        <li routerLink="user-login"><a ><mat-icon matBadge="{{cartItems}}" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
+        <li><a routerLink="user-login"><i class="pi pi-heart"></i></a></li>
+        <li><a class="nav-login" routerLink="user-login"><i class="pi pi-user"></i></a></li>
+        <li><a routerLink="login"><i class="pi pi-shop"></i></a></li>
+        <li routerLink="user-login"><a ><mat-icon matBadge="{{cartItems}}" aria-hidden="false">
+          <i class="pi pi-shopping-cart"></i></mat-icon></a></li>
       </ul>
       <!-- User login Nabvar -->
-      <ul class="links" *ngSwitchCase="'user'">
-        <li [routerLink]="cartItems>0?'cart':null"><a ><mat-icon matBadge="{{cartItems}}" aria-hidden="false"><i class="fa-solid fa-cart-shopping"></i></mat-icon></a></li>
+      <ul class="links user-cart" *ngSwitchCase="'user'">
+        <li [routerLink]="cartItems>0?'cart':null"><a ><mat-icon matBadge="{{cartItems}}" aria-hidden="false"><i class="pi pi-shopping-cart"></i></mat-icon></a></li>
       </ul>
       <!-- Seller login Nabvar -->
       <ul class="links" *ngSwitchCase="'seller'">
@@ -107,7 +108,7 @@
         <li>
           <a style="cursor: pointer; padding: 12px;"><i class="fa fa-lock">&nbsp;&nbsp;Privacy</i></a>
         </li><br>
-        <hr><br>
+        <hr style="border-top: 1px solid;"><br>
         <li>
           <a (click)="userRightSidebar = false" (click)="UserLogout()"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;&nbsp;Sign-Out</a>
         </li>
