--- a/Frontend/Shopcart/src/app/Pages/seller-auth/forgot-password/forgot-password.component.css
+++ b/Frontend/Shopcart/src/app/Pages/seller-auth/forgot-password/forgot-password.component.css
@@ -12,6 +12,19 @@
   font-family: "Poppins", sans-serif;
 }
 
+.message{
+  background: #fefce8;
+  padding: 7px;
+  padding-left: 15px;
+  border-radius: 12px;
+  color: #db9f1a;
+  height: 33px;
+}
+.message i{
+  font-size: 14px;
+  padding-right: 12px;
+}
+
 /* ===== COLOR VARIABLES ===== */
 
 :root {
